--- a/src/component/NavBar/NavBar.css
+++ b/src/component/NavBar/NavBar.css
@@ -16,6 +16,22 @@
   padding: 0px;
 }
 
+element.style {
+  padding-left: 50px;
+}
+.container {
+  padding-left: 50px;
+}
+@media (min-width: 1200px) {
+  .container,
+  .container-lg,
+  .container-md,
+  .container-sm,
+  .container-xl {
+    max-width: 100%;
+  }
+}
+
 .container .navbar {
   box-shadow: 0px 1px 7px 23px rgba(0, 0, 0, 0.65);
   -webkit-box-shadow: 0px 1px 7px 23px rgba(0, 0, 0, 0.65);
@@ -64,7 +80,7 @@
 .booking {
   border-radius: 20px;
   margin-bottom: 30px;
-  padding-right: 20px;
+  padding-right: 28px;
 }
 
 .booking .row {
@@ -100,6 +116,11 @@
   height: 351px;
   object-fit: cover;
   border-radius: 10px 0 0 10px;
+  padding-right: 10px;
+}
+
+.booking .img-fluid {
+  max-width: 97%;
 }
 
 .booking .card-text {
